tinyc/test/bad/array-const-assign.c
int main()
{
    const int ca[1];
    ca[1] = 2;
    return 0;
}
